tests/mytests/error/fun_error3.vsl
PROTO INT foo()

FUNC INT main() {
    test
    test := 5
    RETURN test
}

FUNC VOID foo() {
    test
    test := 5
}
